fix title overflow issue

--- a/public/css/sponsors.css
+++ b/public/css/sponsors.css
@@ -79,6 +79,16 @@
   -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
   border-radius: 5px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: end;
+  -ms-flex-pack: end;
+  justify-content: flex-end;
 }
 .item-name {
   font-family: "PT Serif", serif;
@@ -88,6 +98,7 @@
   cursor: pointer;
   -webkit-transition: 0.25s ease all;
   transition: 0.25s ease all;
+  margin-bottom: auto;
 }
 .item-name:hover {
   color: #ff0083;
@@ -220,7 +231,7 @@
   -webkit-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.15);
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.15);
   position: absolute;
-  top: 50%;
+  top: 40%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
@@ -229,7 +240,6 @@
 .modal-sponsorships {
   width: 100%;
   padding: 10px;
-  padding-top: 30px;
   background-color: #f7f7f7;
   -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
@@ -260,16 +270,14 @@
   position: absolute;
   bottom: 0;
   left: 50%;
-  -webkit-transform: translate(-50%, 50%);
-  transform: translate(-50%, 50%);
-  background: white;
-  padding: 0 50px;
+  -webkit-transform: translateX(-50%);
+  transform: translateX(-50%);
+  background: rgba(0, 0, 0, 0.5);
+  padding: 0 25px;
   z-index: 5;
-  -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
-  border-radius: 20px;
-  color: rgba(0, 0, 0, 0.75);
+  color: white;
   font-weight: 500;
+  width: 100%;
 }
 .modal-description {
   padding: 20px 100px;
